--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,7 +35,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/taxmodelfrontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/front-end-individual:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
