--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aspnet/signalr": "^1.0.27",
     "@azure/msal-angular": "^2.0.4",
     "@azure/msal-browser": "^2.18.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.1",
     "cors": "^2.8.5",
     "jquery": "^3.6.0",
